--- a/.travis.yml
+++ b/.travis.yml
@@ -15,5 +15,5 @@ script:
     - go vet ./...
 #    - $HOME/gopath/bin/goveralls -coverprofile=coverage.cov -service=travis-ci
 #    - bash <(curl -s https://codecov.io/bash)
-    - go test -bench=. -benchmem ./...
+    - go test -bench=. -benchmem .
     #- sh ./install_all_cmd.sh
