--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,13 @@
 language: go
 
 go:
-    - 1.5
+    - "1.10"
     - tip
 
 before_install:
-    - go get golang.org/x/tools/cmd/cover
-    - go get golang.org/x/tools/cmd/vet
-    - go get golang.org/x/tools/cmd/goimports
-    - go get github.com/golang/lint/golint
-    - go get github.com/mattn/goveralls
 
 script:
-    - go vet ./...
+    - go test 
 #    - $HOME/gopath/bin/goveralls -coverprofile=coverage.cov -service=travis-ci
 #    - bash <(curl -s https://codecov.io/bash)
     # - go test -bench=. -benchmem .
